--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -213,3 +213,6 @@ ja:
     created: '作成しました。'
     updated: '更新しました。'
     deleted: '削除しました。'
+  bookmark:
+    created: 'ブックマークに追加しました。'
+    deleted: 'ブックマークを削除しました。'
